# Sound-Interaction-App

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/soundinteractionapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/soundinteractionapp/: AppComponents.kt  AppNav.kt  GameComponents.kt  GameEngine.kt  GameProgressManager.kt  MainActivity.kt  Screen.kt  SoundManager.kt
app/src/main/java/com/soundinteractionapp/components/: AppModeButton.kt  GameLevelButton.kt  SoundInteractionButton.kt
app/src/main/java/com/soundinteractionapp/data/: LeaderboardViewModel.kt  RankingRepository.kt  RankingViewModel.kt.kt  ScoreEntry.kt  SoundData.kt
app/src/main/java/com/soundinteractionapp/data/repository/: FeedbackRepository.kt
app/src/main/java/com/soundinteractionapp/screens/: GameHomeScreen.kt  LoginScreen.kt  SettingScreen.kt  SplashScreen.kt  WelcomeScreen.kt
app/src/main/java/com/soundinteractionapp/screens/components/: LeaderboardDialog.kt
app/src/main/java/com/soundinteractionapp/screens/freeplay/: FreePlayScreen.kt
app/src/main/java/com/soundinteractionapp/screens/game/: GameModeScreen.kt
app/src/main/java/com/soundinteractionapp/screens/profile/: ProfileScreen.kt
app/src/main/java/com/soundinteractionapp/screens/relax/: RelaxScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/soundinteractionapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
